syntax = "proto3";

package com.avermak.vkube.api.hello;

option java_multiple_files = true;
option java_package = "com.avermak.vkube.api.hello";
option java_outer_classname = "HelloVKubeProto";

// The greeting service definition.
service HelloVKubeService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  int64 podTime = 2;
  string podName = 3;
  string podIP = 4;
  string nodeName = 5;
  string nodeIP = 6;

}